#11109 트리 화면 동작 통일 -> 일감 수정 진행

--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -113,6 +113,7 @@
             });
         }
         getTypeList();
+        document.getElementById('root').click();
 
         // 상세조회
         function onGetDetail(typeId) {
@@ -141,7 +142,7 @@
                     document.getElementById('typeIcon').value = responseJson.typeIcon;
                     document.getElementById('typeClassId').value = responseJson.classId;
                     document.getElementById('typeClass').value = responseJson.className;
-                    if (responseJson.pTypeId !== null) {
+                    if (responseJson.editable) {
                         document.querySelector('#btnUpdate').removeAttribute('disabled');
                         document.querySelector('#btnDelete').removeAttribute('disabled');
                         document.querySelector('button[name=typeIconSelector]').removeAttribute('disabled');
