--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -152,6 +152,7 @@
         }
 
         getCodeList();
+        document.getElementById('root').click();
 
         function onGetDetail(codeId) {
             if (!observer.canPageChange()) {
