--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -28,9 +28,10 @@
                 <img class="z-img i-profile-photo" th:src="@{{avatarPath}(avatarPath=${user.avatarPath})}" width="27" height="27" alt="profile pic"/>
             </td>
             <td style="width:9.8%;" class="align-left underline">
-                <a th:text="${user.userName}"
-                   th:onclick="'location.href=\'' + @{/users/{userKey}/edit(userKey=${user.userKey})} + '\''">
-                </a>
+                <a sec:authorize="!hasAuthority('user.update')" th:text="${user.userName}"
+                   th:href="@{/users/{id}/view(id=${user.userKey})}"></a>
+                <a sec:authorize="hasAuthority('user.update')" th:text="${user.userName}"
+                   th:href="@{/users/{id}/edit(id=${user.userKey})}"></a>
             </td>
             <td style="width:10%;" class="align-left" th:text="${user.userId}"></td>
             <td style="width:16%;" class="align-left" th:text="${user.email}"></td>
@@ -42,6 +43,5 @@
         </tr>
     </tbody>
 </table>
-<th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountDataFragment"></th:block>
 </body>
 </html>
