--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5365,7 +5365,7 @@ ul.tree {
   font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #222529;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -5398,7 +5398,7 @@ ul.tree ul:before {
   position: absolute;
   top: 0;
   bottom: 0;
-  border-left: 0.0625rem solid #E1E3E6;
+  border-left: 0.0625rem solid #CFD5D9;
 }
 ul.tree ul li {
   padding-left: calc((0.875rem / 2) + 0.5rem + (1.438rem / 2));
@@ -5410,10 +5410,10 @@ ul.tree ul li:before {
   left: 0;
   width: calc((0.875rem / 2) + 0.5rem + (1.438rem / 2));
   height: 0.0625rem;
-  border-top: 0.0625rem solid #E1E3E6;
+  border-top: 0.0625rem solid #CFD5D9;
 }
 ul.tree ul li:last-child:before {
-  background-color: #F7F8F9;
+  background-color: #FAFAFA;
   height: auto;
   top: 0.9375rem;
   bottom: 0;
@@ -5421,24 +5421,20 @@ ul.tree ul li:last-child:before {
 img.exp_col {
   cursor: pointer;
 }
-
 img.exp_col_empty {
   width: 1rem;
   cursor: pointer;
 }
-
+img.on {
+  display: inline-block;
+}
+img.off {
+  display: none;
+}
 img.icon_tree {
   vertical-align: middle;
   padding-left: 0.188rem;
   margin-top: -0.188rem;
-}
-
-img.on {
-  display: inline-block;
-}
-
-img.off {
-  display: none;
 }
 
 span.node {
@@ -5447,7 +5443,7 @@ span.node {
   cursor: pointer;
 }
 span.node:hover {
-  background-color: rgba(51, 154, 240, 0.05);
+  background-color: #E3F5FC;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
@@ -5460,13 +5456,13 @@ span.node label {
 span.node_selected,
 span.modal_node_selected {
   padding: 0.25rem 0.188rem 0.25rem 0;
-  background-color: #87CEFF;
+  background-color: transparent;
   cursor: pointer;
 }
 span.node_selected label,
 span.modal_node_selected label {
+  color: #339AF0;
   padding-left: 0.5rem;
-  color: #0060A5;
   cursor: pointer;
 }
 
@@ -5479,12 +5475,12 @@ span.modal_node_selected label {
   height: 2.5rem;
   font-size: 1.5rem;
   font-weight: 500;
-  color: #3F4B56;
-  border-bottom: 0.0625rem solid #EBEBEB;
+  color: #222529;
+  border-bottom: 0.0625rem solid #CFD5D9;
 }
 .tree-container .tree-list {
-  margin-top: 0.625rem;
   height: 32.5rem;
+  margin-top: 0.625rem;
 }
 .tree-container .tree-nodata {
   display: inline-block;
@@ -5493,7 +5489,7 @@ span.modal_node_selected label {
   text-align: center;
   font-size: 0.875rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #222529;
 }
 
 /* _color-picker.scss 
@@ -5806,7 +5802,7 @@ body.modal-active {
   width: 34.38rem;
   margin: 0 auto 2em auto;
   background-color: #FFFFFF;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #CFD5D9;
   -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
@@ -5819,7 +5815,7 @@ body.modal-active {
   height: 3.375rem;
   font-size: 1.5rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #222529;
   padding: 1.125rem 0 0 1.25rem;
 }
 .modal-wrapper .modal-dialog .modal-content {
