--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -61,7 +61,7 @@
             return history.go(-1);
         }
         zFileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
-        OverlayScrollbars(document.querySelectorAll('.view'), { className: 'scrollbar' });
+        OverlayScrollbars(document.querySelectorAll('.z-page-content'), { className: 'scrollbar' });
     }
     /* ]]> */
 </script>
