--- a/src/main/resources/public/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/scss/template/_file-uploader.scss
@@ -145,7 +145,7 @@
           .dz-filename {
             grid-column: 2;
             color: $file-uploader-filename-font-color;
-            padding: 0 20px; // 0 20px
+            padding: 0 1.25rem; // 0 20px
             text-align: left;
             @include ellipsis();
           }
