--- a/src/main/resources/public/scss/template/_paging.scss
+++ b/src/main/resources/public/scss/template/_paging.scss
@@ -6,7 +6,7 @@
  */
 // TODO 리스트 페이지 디자인 적용 시 정리 필요.
 .z-itsm-container .z-page-paging {
-  background-color: #FAFAFA;
+  background-color: $neutral50;
 }
 
 .z-page-paging {
