#10972 처리할 문서 구현
- 모달을 생성하는 컴포넌트에 대해 우측 프로퍼티 영역에 화면이 가려지는 현상 수정 (z-index 추가)

--- a/src/main/resources/public/scss/document/_layout.scss
+++ b/src/main/resources/public/scss/document/_layout.scss
@@ -16,6 +16,7 @@
     @include fixedContainer;
     background-color: $layout-main-bg-color;
     @include scrollbarHidden;
+    z-index: $z-index-modal;
 
     // 상단 영역
     .z-document-main-header {
