--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -916,6 +916,7 @@ input, button, select, optgroup, textarea {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+  z-index: 1000;
 }
 .z-document-container .z-document-main::-webkit-scrollbar {
   display: none;
