--- a/src/main/resources/public/scss/document/_layout.scss
+++ b/src/main/resources/public/scss/document/_layout.scss
@@ -15,8 +15,8 @@
   .z-document-main {
     @include fixedContainer;
     background-color: $layout-main-bg-color;
+    z-index: 1000;
     @include scrollbarHidden;
-    z-index: $z-index-modal;
 
     // 상단 영역
     .z-document-main-header {
